--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <p>여기에 생성된 캐릭터가 표시됩니다.</p>
         </div>
         <button id="generate-btn">캐릭터 생성</button>
+        <button id="start-btn">게임 시작</button>
         <div id="dialogue-box">
             <div id="dialogue"></div>
         </div>
