--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="character-display">
             <p>여기에 생성된 캐릭터가 표시됩니다.</p>
         </div>
+        <div id="character-list"></div> <!-- 캐릭터 리스트를 표시할 컨테이너 -->
         <div class="chat-container">
             <div id="dialogue-box">
                 <div id="dialogue"></div>
