--- a/index.html
+++ b/index.html
@@ -3,28 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 기반 캐릭터 생성 도구</title>
+    <title>CharacterForge</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>CharacterForge</h1>
     <div class="container">
-        <h1>AI 기반 캐릭터 생성 도구</h1>
-        <div id="character-display">
-            <p>여기에 생성된 캐릭터가 표시됩니다.</p>
-        </div>
         <div id="character-list"></div> <!-- 캐릭터 리스트를 표시할 컨테이너 -->
         <div class="chat-container">
             <div id="dialogue-box">
                 <div id="dialogue"></div>
             </div>
-            <div class="input-container">
-                <input type="text" id="user-input" placeholder="여기에 입력하세요...">
-                <button id="send-btn">전송</button>
-                <div id="loading-spinner"></div> <!-- 로딩 스피너 -->
-            </div>
+            <button id="start-btn">게임 시작</button>
         </div>
-        <button id="generate-btn">캐릭터 생성</button>
-        <button id="start-btn">게임 시작</button>
+        <div class="input-container">
+            <input type="text" id="user-input" placeholder="여기에 입력하세요...">
+            <button id="send-btn">전송</button>
+            <div id="loading-spinner-container"><div id="loading-spinner"></div></div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
