--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="chat-container">
             <div id="dialogue-box">
                 <div id="dialogue"></div>
+                <div id="count-box"></div> <!-- 진행도 표시 컨테이너 -->
             </div>
             <button id="start-btn">게임 시작</button>
         </div>
